# ComparisonWOD

./: README.md  testinstances2.csv
cospair/: COSPAIR.cpp  Evaluater.cpp  FeatureExtractor.cpp  Reader.h
dgcnn/: data.py  main.py  model.py  train_second.py
pcd2hdf5/: CMakeLists.txt  main.cpp
pointcont/: README.md  data_util.py  main_cls.py
pointcont/config/: cls.yaml
pointcont/config/db/: washington.yaml
pointcont/models/: PointConT_util.py
pointhop/: accuracy.txt  den.py  evaluate.py  modelnet_data.py  point_utils.py  pointhop.py  train.py
pointhop/log/: log_test.txt
